@@ -39,4 +39,5 @@ Revision history for Perl extension ClearCase::Wrapper::MGi.
 	- lsgen: fix to the handling of -obs
 	- lsgen: indentation of incestual parent
 	- diff: -predecessor from the genealogy
-	
+	- diff: special case for checkedout version
+	- lsgen/diff: fix when selected banch/0
